选中iTunes歌曲，运行脚本，给歌曲自动添加歌词信息。
暂且对歌曲名为简体中文且无符号的支持较好，对比较新的歌曲有时候搜不到。另外搜索的结果如果有同名歌曲可能结果也不对。先将就用用吧，这几天有空的时候
我会慢慢完善它的。可以选中多个音乐之后运行脚本批量添加。

--- a/fetchLyric0.1.2 by PhilCai.app/Contents/Info.plist
+++ b/fetchLyric0.1.2 by PhilCai.app/Contents/Info.plist
@@ -11,11 +11,11 @@
 	<key>CFBundleIconFile</key>
 	<string>applet</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.ScriptEditor.id.fetchLyric-0-1-1-by-PhilCai</string>
+	<string>com.apple.ScriptEditor.id.fetchLyric0-1-2-by-PhilCai</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>fetchLyric 0.1.1 by PhilCai</string>
+	<string>fetchLyric0.1.2 by PhilCai</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -34,15 +34,15 @@
 		<key>dividerCollapsed</key>
 		<false/>
 		<key>eventLogLevel</key>
-		<integer>2</integer>
+		<integer>-1</integer>
 		<key>name</key>
 		<string>ScriptWindowState</string>
 		<key>positionOfDivider</key>
 		<real>333</real>
 		<key>savedFrame</key>
-		<string>434 429 602 597 0 0 1920 1178 </string>
+		<string>444 422 602 597 0 0 1920 1178 </string>
 		<key>selectedTabView</key>
-		<string>event log</string>
+		<string>result</string>
 	</dict>
 </dict>
 </plist>
